package fr.projet.gestsio;
/**
 * La classe Appreciation
 */

public class Appreciation {
    private int idEtudiant;
     private String observationEtudiant ;

     //GETTERS
    public int getIdEtudiant() {

        return idEtudiant;
    }

    public String getObservationEtudiant() {

        return observationEtudiant;
    }


}
